2006-01-06  Raja R Harinath  <rharinath@novell.com>

	* PropertyInfoTest.cs: Use newer nunit API.
	(Bug77160): New test from #77160.

2006-01-03  Zoltan Varga  <vargaz@gmail.com>

	* FieldInfoTest.cs PropertyInfoTest.cs MethodInfoTest.cs: Add Nullable
	tests.

2005-12-20  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* AssemblyTest.cs: Remove 'NotWorking' category attribute
	to the Reflection Only tests, since they are working by now.

	* FieldInfoTest.cs: Likewise.

	* MethodInfoTest.cs: Likewise.

2005-12-02  Robert Jordan  <robertj@gmx.net>

	* ReflectedTypeTest.cs: New. Test case for #76829.

2005-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* MethodInfoTest.cs : added MakeGenericMethod test for #76575.

2005-11-15  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyTest.cs: Fix build.

2005-11-05  Kornél Pál  <kornelpal@hotmail.com>

	* AssemblyTest.cs: Updated runtime version to v2.0.50727 (2.0 RTM).

2005-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MethodInfoTest.cs : added test for bug #76541.

2005-09-26  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* AssemblyNameTest.cs: Added some tests for the 2.0 new
	ctor. Keep some of them as NotWorking, since we need to figure out
	an elegant way to avoiding creating Version when not passing it.
	
2005-06-30  Ben Maurer  <bmaurer@ximian.com>

	* AssemblyTest.cs: Relied on the 1.1 test suite being built when
	running teh 2.0 test suite, which could cause failures

2005-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyNameCas.cs: Removed execution of AssemblyNameTest.Self as it
	is now NotWorking.

2005-06-13  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* AssemblyNameTest.cs: "Fixed" tests so they execute without errors on
	both Fx 1.1 SP1 and Fx 2.0 beta 2. Added corresponding NotWorking.

2005-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyNameTest.cs: Added distinctive names for all asserts in 
	Version. Changed Self to NotWorking as other cases returns null. It 