@@ -1,3 +1,7 @@
+2006-02-02  Zoltan Varga  <vargaz@gmail.com>
+
+	* MethodInfoTest.cs: Add test for Invoke and byref valuetypes.
+
 2006-01-06  Raja R Harinath  <rharinath@novell.com>
 
 	* PropertyInfoTest.cs: Use newer nunit API.
